# autoflow_SRXN

./: .gitignore  DOCUMENTATION.md  README.md  config_full.yaml  create_si_reconstructed.py  create_si_slab.py  pyproject.toml  report.md  requirements.txt  setup.py  ssw_plan.md  surface_utils.py  theory.md  todolist.md
.claude/: settings.local.json
autoflow_srxn/: ads_workflow_mgr.py  chem_data.json  chemisorption_builder.py  knowledge_engine.py  logger_utils.py  potentials.py  qpoint_handler.py  si_surface_utils.py  surface_utils.py  thermo_engine.py  vibrational_analyzer.py  viz_utils.py
autoflow_srxn/core/: coverage.py  ts_engine.py
autoflow_srxn/interface/: __init__.py  builder.py  lattice_match.py  visualization.py  workflow.py
core/: ts_engine.py
example_dipas/: POSCAR_reconstructed  Si.vasp  ads_workflow_mgr.py  adsorption_log.txt  analyze_overlaps.py  bdeas_multidentate_candidates.extxyz  catkit_dipas_candidates.extxyz  catkit_dipas_candidates_optimized.extxyz  chemisorption_builder.py  config_bulk.yaml  config_no_pass.yaml  config_si_dipas.yaml  config_si_ethanol_dipas.yaml  config_sio2_dipas.yaml  create_si_reconstructed.py  dipas_3d.extxyz  dipas_adsorption_candidates.extxyz  generate_dipas_catkit.py  potential_factory.py  run.py  run_dipas_study.py  si100_reconstructed_passivated.extxyz  si_eth_discov_all_poses.extxyz  si_eth_discov_inh_all_poses.extxyz  si_surface_utils.py  surface_utils.py  test_bdeas_adsorption.py
example_dipas/structures/: ethanol.vasp
example_general/: run.py
examples/DIPAS_on_Si100/: config.yaml  dipas_on_si100_results_all_poses.extxyz  dipas_on_si100_results_inh_all_poses.extxyz  dipas_on_si100_results_relaxed_poses.extxyz  dipas_si100_test_all_poses.extxyz  generated_substrate.vasp  passivated.vasp  reconstructed_substrate.vasp  run_adsorption.py
examples/DIPAS_on_Si110/: config.yaml  run_adsorption.py
examples/benchmark_phva_sio2/: config.yaml  diagnose_failure.py  generate_benchmark_samples.py  run_autoflow_benchmark.py  run_benchmark.py
examples/interface_match/: config.yaml  config_lowstrain.yaml  interface_summary.txt  run_interface.py
examples/mode_following_relaxation/: README.md  config.yaml  config_test.yaml  dipas_stability_final.vasp  dipas_stability_test_u001_final.vasp  dipas_stability_u0001_final.vasp  dipas_stability_u0005_final.vasp  dipas_stability_u001_final.vasp  dipas_test_u001_final.vasp  out_cgfire_u001.txt  out_cgfire_u005.txt  out_cgfire_u01.txt  out_cgfire_v2_u001.txt  out_cgfire_v2_u005.txt  out_cgfire_v2_u01.txt  out_cgfire_v3_u001.txt  out_cgfire_v3_u005.txt  out_cgfire_v3_u01.txt  out_u0001.txt  (+8 more)
scratch/: test_qpoints_format.py
src/: ads_workflow_mgr.py  chemisorption_builder.py  logger_utils.py  potentials.py  surface_utils.py  test_mace.py  thermo_engine.py  vibrational_analyzer.py
structures/: DIPAS.vasp  SiO2_mp-546794.vasp
unittests/: test_adsorption.py  test_interface.py  test_phva_validation_si110.py  test_potentials.py  test_surface.py  test_vib_thermo.py  test_vibration_viz.py  visualize_metrics.py
(+5125 files in other folders)
